Fixed weird spacing on stream display

--- a/src/Vivelin.Web.Home/wwwroot/css/site.css
+++ b/src/Vivelin.Web.Home/wwwroot/css/site.css
@@ -573,6 +573,7 @@ button,
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+    line-height: 25px;
   }
 
   .stream a,
